gccida/g1/ix86_fp_comparison_codes
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_codes/src/i386.c:7791:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_codes/src/i386.c:7792:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code *bypass_code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_codes/src/i386.c:7793:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code *first_code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_codes/src/i386.c:7794:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code *second_code) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_codes/src/i386.c:7835:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 7379, "ix86_fp_comparison_codes"); 
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_fp_comparison_codes/src/obj/i386.o] Error 1
